--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,6 +9,8 @@
 	<div id="map" style='width :800px; height: 400px;'></div>
 </div>
 
+<%= render 'gmap_display' %>
+
 <script>
 var user = <%= raw @user.to_json %>
 var markers = <%= raw @hash.to_json %>
